Frontend/fintracker-frontend/k8s/service.yaml
  apiVersion: "v1"
  kind: "Service"
  metadata:
    name: "frontend-service"
    namespace: fintracker
    labels:
      env: "prod"
      type: "frontend"
  spec:
    ports:
      - protocol: "TCP"
        port: 80
        targetPort: 80
    selector:
      type: "frontendpod"
