Frontend/fintracker-frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: fintracker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: fintracker-frontend-ip
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: fintracker-frontend-cert
spec:
  rules:
    - host: "frontend.vrajpatelproject.software"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend-service"
                port:
                  number: 80
